--- a/Home.html
+++ b/Home.html
@@ -176,7 +176,7 @@
       <div class="col-12 col-sm-6 col-md-3 m-auto">
           <!-- card starts here -->
           <div class="card shadow">
-              <img src="images/s1.svg" alt="" class="card-img-top">
+              <img src="Images/s1.svg" alt="" class="card-img-top">
               <div class="card-body">
                   <h3 class="text-center">News/Events</h3>
                   <hr class="mx-auto w-75">
@@ -191,7 +191,7 @@
       <div class="col-12 col-sm-6 col-md-3 m-auto">
           <!-- card starts here -->
           <div class="card shadow">
-              <img src="images/s2.svg" alt="" class="card-img-top">
+              <img src="Images/s2.svg" alt="" class="card-img-top">
               <div class="card-body">
                   <h3 class="text-center">Access Data</h3>
                   <hr class="mx-auto w-75">
@@ -207,7 +207,7 @@
       <div class="col-12 col-sm-6 col-md-3 m-auto">
           <!-- card starts here -->
           <div class="card shadow">
-              <img src="images/s3.svg" alt="" class="card-img-top">
+              <img src="Images/s3.svg" alt="" class="card-img-top">
               <div class="card-body">
                   <h3 class="text-center">File Complaint</h3>
                   <hr class="mx-auto w-75">
@@ -223,7 +223,7 @@
       <div class="col-12 col-sm-6 col-md-3 m-auto">
           <!-- card starts here -->
           <div class="card shadow">
-              <img src="images/s4.svg" alt="" class="card-img-top">
+              <img src="Images/s4.svg" alt="" class="card-img-top">
               <div class="card-body">
                   <h3 class="text-center">Tracking System</h3>
                   <hr class="mx-auto w-75">
